--- a/Languages/English/Keyed/StandYourGroundKeys.xml
+++ b/Languages/English/Keyed/StandYourGroundKeys.xml
@@ -7,6 +7,9 @@
   <ZSYG_Pacifist>Pacifists</ZSYG_Pacifist>
   <ZSYG_Children>Children</ZSYG_Children>
   
+  <ZSYG_ApplyDefaults>Re-apply Defaults</ZSYG_ApplyDefaults>
+  <ZSYG_ApplyDefaultsDesc>Apply current settings to all existing colonists. Use if you changed settings and want everyone on the new defaults, or if you enabled this mod mid-game.</ZSYG_ApplyDefaultsDesc>
+  <ZYSG_ApplyDefaultsSuccess>Applied hostility response defaults to {0} colonists.</ZYSG_ApplyDefaultsSuccess>
   
   <ZSYG_AreaRestriction>Restrict allowed area for new pawns</ZSYG_AreaRestriction>
   <ZSYG_AreaRestrictionTooltip>Will restrict new pawn to the most common allowed area for your other pawns</ZSYG_AreaRestrictionTooltip>
